compiler/test/conformance/testdata/errors/03_undefined_type.yz
greet #(name Nope) {
    print(name)
}

main: {
    greet("Alice")
}
